<resources>
    <string name="app_name">ElectivaIV_01_GRUPO_H</string>
    <string name="configuracion"> Configuración  </string>
    <string name="idioma">Idioma </string>
    <string name="contacto"> Contacto</string>
    <string name="acerca_de"> Acerca de </string>
    <string name="salir"> Salir </string>
    <string name="eliminar"> Eliminar </string>
    <string name="actualizar"> Actualizar </string>
</resources>
