<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu"
        android:title="opciones"
        android:icon="@drawable/menu"
        app:showAsAction="always"

        >

        <menu>
            <item
                android:id="@+id/settings"
                android:title="@string/configuracion"
                android:icon="@drawable/settings"
                >
                <menu>
                    <item
                        android:id="@+id/idioma"
                        android:title="@string/idioma"
                        android:icon="@drawable/idioma2"

                        ></item>

                    <item
                        android:id="@+id/contacto"
                        android:title="@string/contacto"
                        android:icon="@drawable/contacto2"

                        ></item>
                </menu>
            </item>

            <item
                android:id="@+id/acerca_de"
                android:icon="@drawable/acerca_de"
                android:title="@string/acerca_de"
                >
            </item>

            <item
                android:id="@+id/salir"
                android:icon="@drawable/salir"
                android:title="@string/salir"
                >
            </item>

        </menu>



    </item>




</menu>